--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,13 @@ authors = ["Jeremy Wells <jemmyw@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "spec_detect"
+path = "src/main.rs"
+
+[[bin]]
+name = "rspec_test"
+path = "src/rspec_test.rs"
 
 [dependencies]
 git2 = "*"
@@ -15,3 +22,7 @@ tui = "*"
 termion = "*"
 anyhow = "1.0"
 config = "0.9"
+state = { version = "0.2", features = ["tls"] }
+globber = "0.1"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
