--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ state = { version = "0.2", features = ["tls"] }
 globber = "0.1"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+owning_ref = "0.4.1"
