--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ globber = "0.1"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 owning_ref = "0.4.1"
+tokio = { version = "0.2", features = ["full"] }
