--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "spec_detect"
-version = "0.1.0"
 authors = ["Jeremy Wells <jemmyw@gmail.com>"]
 edition = "2018"
+name = "spec_detect"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [[bin]]
@@ -14,17 +14,18 @@ name = "rspec_test"
 path = "src/rspec_test.rs"
 
 [dependencies]
-git2 = "*"
-crossbeam-channel = "0.4.0"
-notify = "4.0.12"
-crossterm = "*"
-tui = "*"
-termion = "*"
 anyhow = "1.0"
 config = "0.10.1"
-state = { version = "0.2", features = ["tls"] }
+crossbeam-channel = "0.4.0"
+crossterm = "*"
+git2 = "*"
 globber = "0.1"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+notify = "4.0.12"
 owning_ref = "0.4.1"
-tokio = { version = "0.2", features = ["full", "stream"] }
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+state = {version = "0.2", features = ["tls"]}
+structopt = {version = "0.3"}
+termion = "*"
+tokio = {version = "0.2", features = ["full", "stream"]}
+tui = "*"
