--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/rspec_test.rs"
 
 [dependencies]
 anyhow = "1.0"
+async-trait = "*"
 config = "0.10.1"
 crossbeam-channel = "0.4.0"
 crossterm = "*"
