--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ git2 = "*"
 globber = "0.1"
 notify = "4.0.12"
 owning_ref = "0.4.1"
+regex = "1"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 state = {version = "0.2", features = ["tls"]}
