Use lazy_static! for static regex

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ crossbeam-channel = "0.4.0"
 crossterm = "*"
 git2 = "*"
 globber = "0.1"
+lazy_static = "1"
 notify = "4.0.12"
 owning_ref = "0.4.1"
 regex = "1"
