--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ config = "0.10.1"
 crossbeam-channel = "0.4.0"
 crossterm = "*"
 git2 = "*"
+glob = "0.3.0"
 globber = "0.1"
 lazy_static = "1"
 notify = "4.0.12"
