--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ async-trait = "*"
 config = "0.10.1"
 crossbeam-channel = "0.4.0"
 crossterm = "*"
+evmap = "*"
 git2 = "*"
 glob = "0.3.0"
 globber = "0.1"
