--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/rspec_test.rs"
 
 [dependencies]
 anyhow = "1.0"
+async-stream = "*"
 async-trait = "*"
 config = "0.10.1"
 crossbeam-channel = "0.4.0"
@@ -32,5 +33,6 @@ serde_json = "1.0"
 state = {version = "0.2", features = ["tls"]}
 structopt = {version = "0.3"}
 termion = "*"
-tokio = {version = "0.2", features = ["full", "stream"]}
+tokio = {version = "1.0", features = ["full"]}
+tokio-stream = "0.1"
 tui = "*"
